--- a/wallet-api/package.json
+++ b/wallet-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-express-mongodb",
+  "name": "Wallet Screening",
   "version": "1.0.0",
-  "description": "Node.js Restful CRUD API with Node.js, Express and MongoDB",
+  "description": "Wallet Screening For Cross Boarder Transactions",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,7 @@
     "api",
     "mongodb"
   ],
-  "author": "wallet",
+  "author": "Ganesh Betageri",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
